# retro-fred

./: .gitignore  AUTHORS  AcidDrop.cpp  AcidDrop.hpp  Actions.hpp  Application.cpp  Application.hpp  Block.cpp  Block.hpp  Bullet.cpp  Bullet.hpp  CHANGELOG.md  CMakeLists.txt  Chameleon.cpp  Chameleon.hpp  Config.cpp  Config.hpp  Coord.hpp  Frame.cpp  Frame.hpp  Fred.cpp  Fred.hpp  Game.cpp  Game.hpp  GameEvent.cpp  GameEvent.hpp  GameMap.cpp  GameMap.hpp  Ghost.cpp  Ghost.hpp  MultiDirEnemy.cpp  MultiDirEnemy.hpp  Mummy.cpp  Mummy.hpp  Object.cpp  Object.hpp  README.android  README.linux  README.md  README.txt  (+30 more)
.github/actions/setup-sdl/: action.yml
.github/actions/setup-sdl_image/: action.yml
.github/actions/setup-sdl_mixer/: action.yml
.github/workflows/: build-android.yml  build-ubuntu.yml  build-windows.yml  build.yml
android/: .gitignore  configure  patch-SDL2-2.30.11-aaudio-buffer-size.patch  versions
android-project/app/: .gitignore  build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/res/values/: strings.xml
android/app/: .gitignore  build.gradle
android/app/src/main/: .gitignore  AndroidManifest.xml
android/app/src/main/java/com/eightbitfred/retro_fred/: RetroFred.java
android/app/src/main/res/values/: strings.xml
assets/sounds/: CMakeLists.txt
assets/sprites/: CMakeLists.txt
cpp/: AcidDrop.cpp  AcidDrop.hpp  Android.mk  Application.cpp  Application.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Chameleon.cpp  Chameleon.hpp  Config.cpp  Config.hpp  Controller.cpp  Controller.hpp  Coord.hpp  DisplayConfig.cpp  DisplayConfig.hpp  Fred.cpp  Fred.hpp  Game.cpp  Game.hpp  GameEvent.cpp  GameEvent.hpp  GameMap.cpp  GameMap.hpp  GameRunner.cpp  GameRunner.hpp  Ghost.cpp  Ghost.hpp  Label.hpp  LabelTable.cpp  LabelTable.hpp  Menu.cpp  Menu.hpp  MultiDirEnemy.cpp  MultiDirEnemy.hpp  Mummy.cpp  Mummy.hpp  Object.cpp  Object.hpp  (+23 more)
cpp/fredcore/: CMakeLists.txt  Config.cpp  Config.hpp  Controller.cpp  Controller.hpp  Coord.hpp  DisplayConfig.cpp  DisplayConfig.hpp  Game.cpp  Game.hpp  GameEvent.cpp  GameEvent.hpp  GameWindow.hpp  LabelTable.cpp  LabelTable.hpp  Menu.cpp  Menu.hpp  SoundID.hpp  SoundManager.cpp  SoundManager.hpp  Sprite.cpp  Sprite.hpp  TextureManager.cpp  TextureManager.hpp  Window.cpp  Window.hpp  sdl.hpp
cpp/resources/: resource.h  retro-fred.rc
ios/: .gitignore
ios/Retro-Fred/: iosmain.m
ios/Retro-Fred.xcodeproj/: project.pbxproj
ios/Retro-Fred.xcodeproj/project.xcworkspace/xcuserdata/miguel.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Retro-Fred.xcodeproj/xcuserdata/miguel.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Retro-Fred/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/: Info.plist  fred_icon.icns
tools/: check_version.sh
